static/code/kabum_heranca_multipla.txt
[ 64%] Building CXX object ui/CMakeFiles/logprod-ui.dir/estacao_conserto_item.cpp.obj
C:\Projects\bitforge\logprod\ui\estacao_conserto_item.cpp: In constructor 'logprod::EstacaoConsertoItem::EstacaoConsertoItem(logprod::MainWindow*, Qt::WindowFlags)':
C:\Projects\bitforge\logprod\ui\estacao_conserto_item.cpp:62:20: error: 'class Ui::estacao_conserto_rtc' has no member named 'pbConfirmar'
     connect(m_rtc->pbConfirmar, &QAbstractButton::clicked, this, &EstacaoConsertoItem::saveRTCItems);
                    ^
C:\Projects\bitforge\logprod\ui\estacao_conserto_item.cpp:63:20: error: 'class Ui::estacao_conserto_rtc' has no member named 'pbCancelar'
     connect(m_rtc->pbCancelar, &QAbstractButton::clicked, [this]{ changeState(stHWCNFound); });
                    ^
C:\Projects\bitforge\logprod\ui\estacao_conserto_item.cpp: At global scope:
C:\Projects\bitforge\logprod\ui\estacao_conserto_item.cpp:141:51: warning: unused parameter 'event' [-Wunused-parameter]
 void EstacaoConsertoItem::closeEvent(QCloseEvent *event)
                                                   ^
ui\CMakeFiles\logprod-ui.dir\build.make:419: recipe for target 'ui/CMakeFiles/logprod-ui.dir/estacao_conserto_item.cpp.obj' failed
mingw32-make.exe[4]: *** [ui/CMakeFiles/logprod-ui.dir/estacao_conserto_item.cpp.obj] Error 1
CMakeFiles\Makefile2:795: recipe for target 'ui/CMakeFiles/logprod-ui.dir/all' failed
mingw32-make.exe[3]: *** [ui/CMakeFiles/logprod-ui.dir/all] Error 2
Makefile:150: recipe for target 'all' failed
mingw32-make.exe[2]: *** [all] Error 2